--- a/style.css
+++ b/style.css
@@ -6,8 +6,38 @@
   height: 100%;
 }
 
-.audio {
-  display: none;
+@media screen and (min-width: 320px) and (max-width: 375px) {
+  .wrapper {
+    overflow: hidden;
+    border-radius: 50%;
+    width: 100%;
+    margin-top: 50%;
+  }
+
+  .pedro {
+    width: 375px;
+    scale: 1.1;
+  }
+
+  @keyframes bounce {
+    to {
+      translate: 0 20px;
+    }
+  }
+
+  .pedro {
+    animation: bounce 200ms linear infinite alternate;
+  }
+
+  @keyframes spin {
+    to {
+      rotate: -1turn;
+    }
+  }
+
+  .wrapper {
+    animation: spin 10s linear infinite;
+  }
 }
 
 @media screen and (min-width: 375px) and (max-width: 767.98px) {
