--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
   backdrop-filter: blur(250px) saturate(120%);
   width: 100%;
   height: 100%;
+  position: relative;
 }
 
 @media screen and (min-width: 320px) and (max-width: 375px) {
@@ -76,8 +77,9 @@
 
 @media screen and (min-width: 768.95px) and (max-width: 1438.98px) {
   .wrapper {
-    width: 100%;
-    margin-top: 50%;
+    position: absolute;
+    left: 50%;
+    top: 50%;
   }
 
   .pedro {
@@ -108,8 +110,9 @@
 
 @media screen and (min-width: 1440px) {
   .wrapper {
-    width: 100%;
-    margin-top: 50%;
+    position: absolute;
+    left: 50%;
+    top: 50%;
   }
 
   .pedro {
