--- a/style.css
+++ b/style.css
@@ -7,6 +7,10 @@
   position: relative;
 }
 
+.audio {
+  display: hidden;
+}
+
 @media screen and (min-width: 320px) and (max-width: 375px) {
   .wrapper {
     overflow: hidden;
