--- a/style.css
+++ b/style.css
@@ -82,7 +82,7 @@
 @media screen and (min-width: 768.95px) and (max-width: 1440px) {
   .wrapper {
     position: absolute;
-    left: 50%;
+    /* left: 50%; */
     top: 50%;
   }
 
