--- a/style.css
+++ b/style.css
@@ -84,6 +84,8 @@
     position: absolute;
     /* left: 50%; */
     top: 50%;
+    right: 250px;
+    left: 250px;
   }
 
   .pedro {
@@ -115,8 +117,9 @@
 @media screen and (min-width: 1440px) {
   .wrapper {
     position: absolute;
-    left: 50%;
     top: 50%;
+    right: 250px;
+    left: 250px;
   }
 
   .pedro {
